--- a/style.css
+++ b/style.css
@@ -1,29 +1,30 @@
-*{
+* {
   padding: 0;
   margin: 0;
 }
-body, html{
+body,
+html {
   scroll-behavior: smooth;
 }
-a{
+a {
   text-decoration: none;
-  color: #EDE2E4;
+  color: #ede2e4;
 }
-img{
+img {
   display: block;
 }
-h1{
-  color: #F0F0F0;
+h1 {
+  color: #f0f0f0;
   font-size: 60px;
   margin-bottom: 0;
 }
-h2{
+h2 {
   font-style: italic;
   font-size: 30px;
   color: #b72438;
 }
 /*------------------------------*/
-#page-header{
+#page-header {
   width: 100%;
   height: 10vh;
   position: fixed;
@@ -32,7 +33,7 @@ h2{
   background: #90313e;
   border-bottom: 1px solid black;
 }
-#navbar{
+#navbar {
   float: right;
   display: flex;
   flex-direction: row;
@@ -41,40 +42,46 @@ h2{
   width: 40%;
   justify-content: space-around;
 }
-#navbar > a{
-  color: #EDE2E4;
+h3 {
+  color: #b72438;
+  font-style: italic;
+  font-size: 30px;
+  margin: 0 auto 1em auto;
+}
+#navbar > a {
+  color: #ede2e4;
   font-size: 30px;
 }
-#navbar > a:hover{
+#navbar > a:hover {
   color: #220c0f;
 }
 /*------------------------------*/
-section{
+section {
   text-align: center;
   width: 100%;
   min-height: 100vh;
   padding-top: 10vh;
   box-sizing: border-box;
 }
-#welcome-section{
-  background: #28292B;
+#welcome-section {
+  background: #28292b;
   padding-top: 25vh;
 }
 /*------------------Projects section------------------*/
-#projects{
-  background: #45567D;
+#projects {
+  background: #45567d;
   padding-bottom: 100px;
 }
-#projects-header{
-  color: #F0F0F0;
+#projects-header {
+  color: #f0f0f0;
   max-width: 40%;
-  margin: 1em auto;
+  margin: 1em auto 0.2em auto;
   font-style: normal;
   padding-bottom: 0.2em;
-  border-bottom: 2px solid #F0F0F0;
+  border-bottom: 2px solid #f0f0f0;
   font-size: 45px;
 }
-#projects-grid{
+#projects-grid {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   grid-gap: 3em;
@@ -84,11 +91,11 @@ section{
   padding: 1em;
   padding-bottom: 5em;
 }
-.project-tile{
+.project-tile {
   box-shadow: 1px 0px 5px 2px #1d2435;
   overflow: hidden;
 }
-.hyperlink-icon{
+.hyperlink-icon {
   display: inline;
   vertical-align: bottom;
   font-size: 0;
@@ -97,32 +104,32 @@ section{
   opacity: 0;
   transition: opacity 0.3s ease-out;
 }
-.project-tile:hover .hyperlink-icon{
+.project-tile:hover .hyperlink-icon {
   opacity: 1;
 }
-.project-image{
+.project-image {
   width: 100%;
   min-height: 300px;
   border-radius: 3px;
   object-fit: cover;
 }
-.project-name{
+.project-name {
   background: #303841;
-  color: #F0F0F0;
+  color: #f0f0f0;
   text-align: center;
   padding: 1em;
   border-radius: 3px;
 }
 
-#profile-link{
+#profile-link {
   text-align: center;
   padding: 1.5em 3em;
   background: #303841;
-  color: #F0F0F0;
+  color: #f0f0f0;
   margin-top: 4em;
   transition: background 0.3s ease-out;
 }
 
-#profile-link:hover{
-  background: #90313E;
+#profile-link:hover {
+  background: #90313e;
 }
